--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Site de location et de leasing de voiture de sport">
+    <meta name="Keywords" content="Voiture sport, location, leasing, voiture luxe,">
+    <meta name="author" content="">
+    <link rel="icon" type="image/x-icon" href="image/IConiMotors (1).png">
+    <link rel="stylesheet" href="style/style.css">
+    <title>IconicMotors</title>
 </head>
-<body>
-    
-<h1>hello world</h1>
 
-</body>
+<header>
+    <img id="Logo" src="image/IConiMotors (1).png" alt="Logo IconicMotors">
+    <br>
+    <div>
+        <img id="banniere" src="image/Projet Supprimer un arrière-plan.png" alt="banniere sans fond d'écran">
+        <h1>IconicMotors</h1>
+    </div>
+</header>
+
+
+<nav>
+    <ul>
+        <li> <a href="html/location.html"> Location </a></li>
+        <li> <a href="#"> Se connecter</a></li>
+        <li> <a href="html/leasing.html"> Leasing </a></li>
+        <li> <a href="html/souscription.html"> Souscrire</a></li>
+    </ul>
+</nav>
+
+
+
+
+
+
+
+
+
+
+
+<footer>
+
+</footer>
+
 </html>
