--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div>
         <img id="banniere" src="image/Projet Supprimer un arrière-plan.png" alt="banniere sans fond d'écran">
         <h1>IconicMotors</h1>
+        <h1>Industries</h1>
     </div>
 </header>
 
