--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <img id="banniere" src="image/Projet Supprimer un arrière-plan.png" alt="banniere sans fond d'écran">
         <h1>IconicMotors</h1>
         <h1>Industries</h1>
+        <h2>fzfez</h2>
     </div>
 </header>
 
